Fix some background colors

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -2868,7 +2868,7 @@ Anchor variants:<br />
 </ul>
 
 <h3>Navbar</h3>
-<nav class="navbar navbar-expand navbar-light bg-faded mb-1">
+<nav class="navbar navbar-expand navbar-light bg-light mb-1">
   <a class="navbar-brand" href="#">Navbar</a>
   <ul class="navbar-nav">
     <li class="nav-item">
@@ -2890,7 +2890,7 @@ Anchor variants:<br />
   </form>
 </nav>
 
-<nav class="navbar navbar-expand navbar-dark bg-inverse mb-1">
+<nav class="navbar navbar-expand navbar-dark bg-dark mb-1">
   <a class="navbar-brand" href="#">Navbar</a>
   <ul class="nav navbar-nav">
     <li class="nav-item">
@@ -2958,34 +2958,34 @@ Anchor variants:<br />
 
 <h3>Navbar positions</h3>
 <div class="navbar-sample">
-    <nav class="navbar navbar-light bg-faded">
+    <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="#">Static default</a>
     </nav>
 </div>
 <div class="navbar-sample">
-    <nav class="navbar fixed-top navbar-light bg-faded">
+    <nav class="navbar fixed-top navbar-light bg-light">
         <a class="navbar-brand" href="#">Fixed top</a>
     </nav>
 </div>
 <div class="navbar-sample">
-    <nav class="navbar fixed-bottom navbar-light bg-faded">
+    <nav class="navbar fixed-bottom navbar-light bg-light">
         <a class="navbar-brand" href="#">Fixed bottom</a>
     </nav>
 </div>
 <div class="navbar-sample">
-    <nav class="navbar sticky-top navbar-light bg-faded">
+    <nav class="navbar sticky-top navbar-light bg-light">
         <a class="navbar-brand" href="#">Sticky top</a>
     </nav>
 </div>
 
 <h3>Navbar - collapsible content</h3>
 <div class="collapse" id="exCollapsingNavbar1">
-  <div class="palette-item bg-inverse p-a-1">
+  <div class="palette-item bg-dark p-a-1">
     <h4>Collapsed content</h4>
     Toggleable via the navbar brand.
   </div>
 </div>
-<nav class="navbar navbar-light bg-faded mb-1">
+<nav class="navbar navbar-light bg-light mb-1">
   <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#exCollapsingNavbar1" aria-label="Toggle navigation">
     <span class="icon-menu" aria-hidden="true">&#8801;</span>
   </button>
@@ -2993,7 +2993,7 @@ Anchor variants:<br />
 
 <h3>Responsive navbar</h3>
 <small>resize screen below 'md' breakpoint</small><br />
-<nav class="navbar navbar-light bg-faded mb-1">
+<nav class="navbar navbar-light bg-light mb-1">
   <a class="navbar-brand" href="#">Responsive navbar</a>
   <button class="navbar-toggle d-lg-none float-end" type="button" data-cfw="collapse" data-cfw-collapse-target="#exCollapsingNavbar2" aria-label="Toggle navigation">
     <span class="icon-menu" aria-hidden="true">&#8801;</span>
