--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -164,7 +164,7 @@ $(window).ready(function() {
 </head>
 <body data-cfw="scrollspy" data-cfw-scrollspy-target=".sidebar">
 <header>
-    <div class="navbar bg-inverse mb-1">
+    <div class="navbar bg-dark mb-1">
         <div class="container">
             <div class="navbar-header">
                 <h1 class="navbar-brand" style="margin: 0;">Figuration Testing</h1>
@@ -1647,7 +1647,7 @@ $(window).ready(function() {
 
             <h2 id="scrollspy">Scrollspy</h2>
 
-            <nav id="navbar-example" class="navbar navbar-light bg-faded">
+            <nav id="navbar-example" class="navbar navbar-light bg-light">
                 <a class="navbar-brand" href="#">Navbar</a>
                 <ul class="nav nav-pills">
                     <li class="nav-item"><a href="#alpha" class="nav-link">Alpha</a></li>
