--- a/test/visual/flexbox-navbar.html
+++ b/test/visual/flexbox-navbar.html
@@ -24,7 +24,7 @@
 
 <h2>Basic Navbars</h2>
 
-<nav class="navbar navbar-light bg-faded">
+<nav class="navbar navbar-light bg-light">
     <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarB0">
         <span aria-hidden="true">&#8801;</span>
     </button>
@@ -57,7 +57,7 @@
     </div>
 </nav>
 
-<nav class="navbar navbar-light bg-faded flex-between">
+<nav class="navbar navbar-light bg-light flex-between">
     <a href="#" class="navbar-brand">Basic</a>
     <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarB1">
         <span aria-hidden="true">&#8801;</span>
@@ -92,7 +92,7 @@
 
 <h2>Responsive Navbars</h2>
 
-<nav class="navbar navbar-expand navbar-light bg-faded">
+<nav class="navbar navbar-expand navbar-light bg-light">
     <a href="#" class="navbar-brand">Expand Always</a>
     <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR0">
         <span aria-hidden="true">&#8801;</span>
@@ -125,7 +125,7 @@
     </div>
 </nav>
 
-<nav class="navbar navbar-expand-sm navbar-light bg-faded flex-between">
+<nav class="navbar navbar-expand-sm navbar-light bg-light flex-between">
     <a href="#" class="navbar-brand">Expand at `sm`</a>
     <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR1">
         <span aria-hidden="true">&#8801;</span>
@@ -158,7 +158,7 @@
     </div>
 </nav>
 
-<nav class="navbar navbar-expand-md navbar-light bg-faded flex-between">
+<nav class="navbar navbar-expand-md navbar-light bg-light flex-between">
     <a href="#" class="navbar-brand">Expand at `md`</a>
     <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR2">
         <span aria-hidden="true">&#8801;</span>
@@ -191,7 +191,7 @@
     </div>
 </nav>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-faded flex-between">
+<nav class="navbar navbar-expand-lg navbar-light bg-light flex-between">
     <a href="#" class="navbar-brand">Expand at `lg`</a>
     <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR3">
         <span aria-hidden="true">&#8801;</span>
@@ -224,7 +224,7 @@
     </div>
 </nav>
 
-<nav class="navbar navbar-expand-xl navbar-light bg-faded flex-between">
+<nav class="navbar navbar-expand-xl navbar-light bg-light flex-between">
     <a href="#" class="navbar-brand">Expand at `xl`</a>
     <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR4">
         <span aria-hidden="true">&#8801;</span>
@@ -259,7 +259,7 @@
 
 <h2>Justified Navbar</h2>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-faded flex-between">
+<nav class="navbar navbar-expand-lg navbar-light bg-light flex-between">
     <a href="#" class="navbar-brand">Justified</a>
     <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarJ0">
         <span aria-hidden="true">&#8801;</span>
@@ -294,7 +294,7 @@
 
 <h2>Container Navbar</h2>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-faded flex-between">
+<nav class="navbar navbar-expand-lg navbar-light bg-light flex-between">
     <div class="container">
         <a href="#" class="navbar-brand">Container</a>
         <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarC0">
@@ -331,7 +331,7 @@
 
 <h2>Centered Navbars</h2>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-faded">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarCO0">
         <span aria-hidden="true">&#8801;</span>
     </button>
@@ -360,7 +360,7 @@
     </div>
 </nav>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-faded">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
         <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarCO1">
             <span aria-hidden="true">&#8801;</span>
@@ -394,7 +394,7 @@
 <div class="container">
     <h2>Navbars in Containers</h2>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-faded flex-between">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light flex-between">
         <a href="#" class="navbar-brand">Expand at `lg`</a>
         <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarIC0">
             <span aria-hidden="true">&#8801;</span>
@@ -427,7 +427,7 @@
         </div>
     </nav>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-faded">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarIC1">
             <span aria-hidden="true">&#8801;</span>
         </button>
@@ -459,11 +459,11 @@
 
 <h2>Navbar Text w/ Links</h2>
 
-<nav class="navbar navbar-light bg-faded">
+<nav class="navbar navbar-light bg-light">
     <span class="navbar-text">Navbar text <a href="#">link</a> example</span>
 </nav>
 
-<nav class="navbar navbar-dark bg-inverse">
+<nav class="navbar navbar-dark bg-dark">
     <span class="navbar-text">Navbar text <a href="#">link</a> example</span>
 </nav>
 
