--- a/test/visual/flexbox-grid.html
+++ b/test/visual/flexbox-grid.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 <header>
-    <div class="navbar bg-inverse">
+    <div class="navbar bg-dark">
         <div class="container">
             <div class="navbar-header">
                 <h1 class="navbar-brand" style="margin: 0;">Figuration Testing</h1>
