--- a/test/visual/modal.html
+++ b/test/visual/modal.html
@@ -36,7 +36,7 @@
 </head>
 <body class="pb-2">
 
-<nav class="navbar navbar-expand-lg navbar-light bg-faded flex-between sticky-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-light flex-between sticky-top">
   <a href="#" class="navbar-brand">Navbar</a>
   <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbar0">
     <span aria-hidden="true">&#8801;</span>
@@ -113,7 +113,7 @@
 <p>Vivamus sollicitudin porttitor nisl, sed tempor leo. Maecenas ut rhoncus nisi. Morbi ut bibendum est. Donec tincidunt nec tellus a egestas. Donec id tortor elementum, aliquet magna euismod, commodo felis. Sed a nulla viverra, malesuada nisi a, fringilla velit. Donec justo felis, cursus eu justo ac, vehicula consequat mauris. Duis a interdum lectus, eu dictum nibh. Cras ligula velit, vehicula et luctus a, cursus quis sapien. Aenean a molestie libero. Nam congue ultrices turpis, sed tempus arcu malesuada sit amet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam eu ligula eleifend, rutrum purus id, pharetra enim. Pellentesque a posuere ex, ac egestas quam. Etiam lobortis massa at elementum consectetur. Nullam tempor orci quis ligula eleifend auctor.</p>
 <p>Integer eget fringilla ex. Quisque ex ante, eleifend non massa a, tempus condimentum lorem. Donec a est sed enim ullamcorper posuere eu sed libero. Etiam sit amet tellus mi. Mauris dui risus, finibus sed turpis vitae, pulvinar pretium felis. Duis id metus at eros laoreet tempus. Nunc mattis efficitur dolor, nec maximus tellus commodo nec. Etiam ac molestie dolor, at hendrerit ante. Donec vehicula ipsum et mauris finibus, eu pellentesque felis rhoncus. Pellentesque viverra arcu sapien, ut lobortis ante ultrices vel. Vivamus quis justo nec ipsum vestibulum tempor. Nullam lacinia dui sed libero tempor tempus.</p>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-faded flex-between fixed-bottom">
+<nav class="navbar navbar-expand-lg navbar-light bg-light flex-between fixed-bottom">
   <a href="#" class="navbar-brand">Navbar</a>
   <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbar1">
     <span aria-hidden="true">&#8801;</span>
