Clean up visual tests

--- a/test/visual/card.html
+++ b/test/visual/card.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<title>Figuration - Flexbox Cards</title>
+<title>Figuration - Card</title>
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
@@ -39,7 +39,7 @@ Holder.addTheme("gray", {
 <body>
 
 <div class="container">
-    <h1>Cards</h1>
+    <h1>Card</h1>
 
     <h2>Deck</h2>
 
