--- a/test/visual/equalize.html
+++ b/test/visual/equalize.html
@@ -37,7 +37,7 @@
 <body>
 
 <div class="container">
-    <h1 class="mb-1">Figuration - Equalize Visual Tests</h1>
+    <h1>Equalize</h1>
 
     <h2>Responsive Row - default mode</h2>
     <div class="row" id="eq0" data-cfw="equalize" data-cfw-equalize-target=".card">
