--- a/test/visual/form-inline.html
+++ b/test/visual/form-inline.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<title>Figuration - Flexbox Inline Forms</title>
+<title>Figuration - Form: Inline</title>
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
@@ -15,7 +15,7 @@
 <body>
 
 <div class="container mb-1">
-    <h1>Inline Forms</h1>
+    <h1>Form: Inline</h1>
 
     <form class="form-inline">
         <div class="form-group mb-0_5 me-sm-0_5 mb-sm-0">
