--- a/test/visual/form.html
+++ b/test/visual/form.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<title>Figuration - Forms</title>
+<title>Figuration - Form</title>
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
@@ -38,7 +38,9 @@ Holder.addTheme("gray", {
 
 <div class="container">
 
-<h3>Select Sizing Comparison:</h3>
+<h1>Form</h1>
+
+<h2>Select Sizing Comparison:</h2>
 <div class="select-sizing">
     <form class="row">
       <div class="col-md-2 text-end">
@@ -204,7 +206,7 @@ Holder.addTheme("gray", {
 
 <hr />
 
-<h3>Select Sizing:</h3>
+<h2>Select Sizing:</h2>
 <div class="mb-1">
     <select class="form-control form-control-xl">
         <option>Extra large select</option>
@@ -225,7 +227,7 @@ Holder.addTheme("gray", {
 
 <hr />
 
-<h3>Custom Select Sizing:</h3>
+<h2>Custom Select Sizing:</h2>
 <div class="mb-1">
     <select class="custom-select custom-select-xl">
         <option>Extra large select</option>
@@ -246,7 +248,7 @@ Holder.addTheme("gray", {
 
 <hr />
 
-<h3>Static and Label Sizing:</h3>
+<h2>Static and Label Sizing:</h2>
 <div class="form-group row">
     <label class="col-sm-2 form-control-label form-control-label-xs">Email</label>
     <div class="col-sm-10">
@@ -280,7 +282,7 @@ Holder.addTheme("gray", {
 
 <hr />
 
-<h3>On Backgrounds</h3>
+<h2>On Backgrounds</h2>
 
 <div class="row mb-1">
     <div class="col">
@@ -307,23 +309,25 @@ Holder.addTheme("gray", {
 <div class="row mb-1">
     <div class="col">
         <div class="p-0_5"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
-        <div class="p-0_5 bg-gray-100"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
-        <div class="p-0_5 bg-gray-900"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
-        <div class="p-0_5 bg-blue-400"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
-        <div class="p-0_5 bg-red-400"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
-        <div class="p-0_5 bg-green-400"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
-        <div class="p-0_5 bg-cyan-400"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
-        <div class="p-0_5 bg-yellow-400"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
+        <div class="p-0_5 bg-primary"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
+        <div class="p-0_5 bg-secondary"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
+        <div class="p-0_5 bg-success"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
+        <div class="p-0_5 bg-info"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
+        <div class="p-0_5 bg-warning"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
+        <div class="p-0_5 bg-danger"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
+        <div class="p-0_5 bg-light"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
+        <div class="p-0_5 bg-dark"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
     </div>
     <div class="col">
         <div class="p-0_5"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
-        <div class="p-0_5 bg-gray-100"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
-        <div class="p-0_5 bg-gray-900"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
-        <div class="p-0_5 bg-blue-400"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
-        <div class="p-0_5 bg-red-400"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
-        <div class="p-0_5 bg-green-400"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
-        <div class="p-0_5 bg-cyan-400"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
-        <div class="p-0_5 bg-yellow-400"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
+        <div class="p-0_5 bg-primary"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
+        <div class="p-0_5 bg-secondary"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
+        <div class="p-0_5 bg-success"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
+        <div class="p-0_5 bg-info"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
+        <div class="p-0_5 bg-warning"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
+        <div class="p-0_5 bg-danger"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
+        <div class="p-0_5 bg-light"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
+        <div class="p-0_5 bg-dark"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
     </div>
 </div>
 
