--- a/test/visual/grid.html
+++ b/test/visual/grid.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<title>Figuration - Flexbox Grid</title>
+<title>Figuration - Grid</title>
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
@@ -31,7 +31,7 @@
 </head>
 <body>
 <header>
-    <div class="navbar bg-dark">
+    <div class="navbar bg-dark text-light">
         <div class="container">
             <div class="navbar-header">
                 <h1 class="navbar-brand" style="margin: 0;">Figuration Testing</h1>
