--- a/test/visual/media-object.html
+++ b/test/visual/media-object.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<title>Figuration - Flexbox Media Object</title>
+<title>Figuration - Media Object</title>
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
@@ -32,7 +32,7 @@ Holder.addTheme("gray", {
 <body>
 
 <div class="container"><div class="row"><div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-4">
-    <h1>Media object</h1>
+    <h1>Media Object</h1>
 
     <div class="media">
         <a href="#" class="d-flex me-1">
