--- a/test/visual/nav.html
+++ b/test/visual/nav.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<title>Figuration - Flexbox Navs</title>
+<title>Figuration - Nav</title>
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
@@ -21,7 +21,7 @@
 <body>
 
 <div class="container">
-    <h1>Navs</h1>
+    <h1>Nav</h1>
 
     <h2>List</h2>
 
