--- a/test/visual/switch.html
+++ b/test/visual/switch.html
@@ -17,8 +17,7 @@
 
 <div class="container">
 
-<h1>Figuration Switches</h1>
-<a href="http://figuration.org">Figuration website</a>
+<h1>Switch</h1>
 
 <h2>Basic</h2>
 
