--- a/test/visual/navbar.html
+++ b/test/visual/navbar.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<title>Figuration - Flexbox Navbar</title>
+<title>Figuration - Navbar</title>
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
