Rework input group
- Drop border opacity for forms.
- Update z-index handling for input-group children items

--- a/test/visual/form.html
+++ b/test/visual/form.html
@@ -287,23 +287,25 @@ Holder.addTheme("gray", {
 <div class="row mb-1">
     <div class="col">
         <div class="p-0_5"><input type="text" class="form-control" placeholder="something"></div>
-        <div class="p-0_5 bg-gray-100"><input type="text" class="form-control" placeholder="something"></div>
-        <div class="p-0_5 bg-gray-900"><input type="text" class="form-control" placeholder="something"></div>
-        <div class="p-0_5 bg-blue-400"><input type="text" class="form-control" placeholder="something"></div>
-        <div class="p-0_5 bg-red-400"><input type="text" class="form-control" placeholder="something"></div>
-        <div class="p-0_5 bg-green-400"><input type="text" class="form-control" placeholder="something"></div>
-        <div class="p-0_5 bg-cyan-400"><input type="text" class="form-control" placeholder="something"></div>
-        <div class="p-0_5 bg-yellow-400"><input type="text" class="form-control" placeholder="something"></div>
+        <div class="p-0_5 bg-primary"><input type="text" class="form-control" placeholder="something"></div>
+        <div class="p-0_5 bg-secondary"><input type="text" class="form-control" placeholder="something"></div>
+        <div class="p-0_5 bg-success"><input type="text" class="form-control" placeholder="something"></div>
+        <div class="p-0_5 bg-info"><input type="text" class="form-control" placeholder="something"></div>
+        <div class="p-0_5 bg-warning"><input type="text" class="form-control" placeholder="something"></div>
+        <div class="p-0_5 bg-danger"><input type="text" class="form-control" placeholder="something"></div>
+        <div class="p-0_5 bg-light"><input type="text" class="form-control" placeholder="something"></div>
+        <div class="p-0_5 bg-dark"><input type="text" class="form-control" placeholder="something"></div>
     </div>
     <div class="col">
         <div class="p-0_5"><select type="text" class="custom-select"><option>Select</option></select></div>
-        <div class="p-0_5 bg-gray-100"><select type="text" class="custom-select"><option>Select</option></select></div>
-        <div class="p-0_5 bg-gray-900"><select type="text" class="custom-select"><option>Select</option></select></div>
-        <div class="p-0_5 bg-blue-400"><select type="text" class="custom-select"><option>Select</option></select></div>
-        <div class="p-0_5 bg-red-400"><select type="text" class="custom-select"><option>Select</option></select></div>
-        <div class="p-0_5 bg-green-400"><select type="text" class="custom-select"><option>Select</option></select></div>
-        <div class="p-0_5 bg-cyan-400"><select type="text" class="custom-select"><option>Select</option></select></div>
-        <div class="p-0_5 bg-yellow-400"><select type="text" class="custom-select"><option>Select</option></select></div>
+        <div class="p-0_5 bg-primary"><select type="text" class="custom-select"><option>Select</option></select></div>
+        <div class="p-0_5 bg-secondary"><select type="text" class="custom-select"><option>Select</option></select></div>
+        <div class="p-0_5 bg-success"><select type="text" class="custom-select"><option>Select</option></select></div>
+        <div class="p-0_5 bg-info"><select type="text" class="custom-select"><option>Select</option></select></div>
+        <div class="p-0_5 bg-warning"><select type="text" class="custom-select"><option>Select</option></select></div>
+        <div class="p-0_5 bg-danger"><select type="text" class="custom-select"><option>Select</option></select></div>
+        <div class="p-0_5 bg-light"><select type="text" class="custom-select"><option>Select</option></select></div>
+        <div class="p-0_5 bg-dark"><select type="text" class="custom-select"><option>Select</option></select></div>
     </div>
 </div>
 <div class="row mb-1">
