--- a/test/visual/input-group.html
+++ b/test/visual/input-group.html
@@ -282,7 +282,7 @@ Holder.addTheme("gray", {
 
 <hr />
 
-<h3>Input group sizes</h3>
+<h2>Input group sizes</h2>
 
 <div class="input-group input-group-xl">
   <span class="input-group-addon" id="sizing-addon-n1">@</span>
@@ -320,7 +320,123 @@ Holder.addTheme("gray", {
   </span>
 </div>
 
-<h3>Feedback</h3>
+<h2>Input group size w/ select</h2>
+
+<div class="input-group input-group-xl">
+    <select class="form-control" aria-label="Select one">
+        <option selected>Choose...</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+    </select>
+    <span class="input-group-btn">
+        <button class="btn" type="button">Go!</button>
+    </span>
+</div>
+<div class="input-group input-group-lg">
+    <select class="form-control" aria-label="Select one">
+        <option selected>Choose...</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+    </select>
+    <span class="input-group-btn">
+        <button class="btn" type="button">Go!</button>
+    </span>
+</div>
+<div class="input-group">
+    <select class="form-control" aria-label="Select one">
+        <option selected>Choose...</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+    </select>
+    <span class="input-group-btn">
+        <button class="btn" type="button">Go!</button>
+    </span>
+</div>
+<div class="input-group input-group-sm">
+    <select class="form-control" aria-label="Select one">
+        <option selected>Choose...</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+    </select>
+    <span class="input-group-btn">
+        <button class="btn" type="button">Go!</button>
+    </span>
+</div>
+<div class="input-group input-group-xs">
+    <select class="form-control" aria-label="Select one">
+        <option selected>Choose...</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+    </select>
+    <span class="input-group-btn">
+        <button class="btn" type="button">Go!</button>
+    </span>
+</div>
+
+<h2>Input group size w/ Custom select</h2>
+
+<div class="input-group input-group-xl">
+    <select class="custom-select" aria-label="Select one">
+        <option selected>Choose...</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+    </select>
+    <span class="input-group-btn">
+        <button class="btn" type="button">Go!</button>
+    </span>
+</div>
+<div class="input-group input-group-lg">
+    <select class="custom-select" aria-label="Select one">
+        <option selected>Choose...</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+    </select>
+    <span class="input-group-btn">
+        <button class="btn" type="button">Go!</button>
+    </span>
+</div>
+<div class="input-group">
+    <select class="custom-select" aria-label="Select one">
+        <option selected>Choose...</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+    </select>
+    <span class="input-group-btn">
+        <button class="btn" type="button">Go!</button>
+    </span>
+</div>
+<div class="input-group input-group-sm">
+    <select class="custom-select" aria-label="Select one">
+        <option selected>Choose...</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+    </select>
+    <span class="input-group-btn">
+        <button class="btn" type="button">Go!</button>
+    </span>
+</div>
+<div class="input-group input-group-xs">
+    <select class="custom-select" aria-label="Select one">
+        <option selected>Choose...</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+    </select>
+    <span class="input-group-btn">
+        <button class="btn" type="button">Go!</button>
+    </span>
+</div>
+
+<h2>Feedback</h2>
 
 <div class="input-group form-group has-success">
   <input type="text" class="form-control" placeholder="Username">
@@ -392,7 +508,7 @@ Holder.addTheme("gray", {
   <input type="text" class="form-control" placeholder="Username">
 </div>
 
-<h3>Margin Check</h3>
+<h2>Margin Check</h2>
 
 <form class="form-inline mb-1">
     <div class="input-group">
@@ -535,6 +651,122 @@ Holder.addTheme("gray", {
         </div>
     </div>
 </form>
+
+<h2>Input group button dropdown</h2>
+<div class="row">
+  <div class="col-lg-6">
+    <div class="input-group">
+      <div class="input-group-btn">
+        <button type="button" class="btn btn-secondary dropdown-toggle" data-cfw="dropdown">
+          Action
+        </button>
+        <ul class="dropdown-menu">
+          <li><a href="#">Action</a></li>
+          <li><a href="#">Another action</a></li>
+          <li><a href="#">Something else here</a></li>
+          <li class="dropdown-divider"></li>
+          <li><a href="#">Separated link</a></li>
+        </ul>
+      </div>
+      <input type="text" class="form-control" aria-label="Text input with dropdown button">
+    </div>
+  </div>
+  <div class="col-lg-6">
+    <div class="input-group">
+      <input type="text" class="form-control" aria-label="Text input with dropdown button">
+      <div class="input-group-btn dropdown-menu-reverse">
+        <button type="button" class="btn btn-secondary dropdown-toggle" data-cfw="dropdown">
+          Action
+        </button>
+        <ul class="dropdown-menu">
+          <li><a href="#">Action</a></li>
+          <li><a href="#">Another action</a></li>
+          <li><a href="#">Something else here</a></li>
+          <li class="dropdown-divider"></li>
+          <li><a href="#">Separated link</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+<h2>Segmented Buttons</h2>
+
+<div class="input-group mb-3">
+    <div class="input-group-btn">
+        <button type="button" class="btn btn-outline-secondary">Action</button>
+    </div>
+    <div class="input-group-btn">
+        <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-cfw="dropdown" aria-label="Toggle Dropdown"></button>
+        <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="dropdown-divider"></li>
+            <li><a href="#">Separated link</a></li>
+        </ul>
+    </div>
+    <input type="text" class="form-control" aria-label="Text input with segmented dropdown button">
+</div>
+
+<div class="input-group">
+    <input type="text" class="form-control" aria-label="Text input with segmented dropdown button">
+    <div class="input-group-btn">
+        <button type="button" class="btn btn-outline-secondary">Action</button>
+    </div>
+    <div class="input-group-btn dropdown-menu-reverse">
+        <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-cfw="dropdown" aria-label="Toggle Dropdown"></button>
+        <ul class="dropdown-menu ">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="dropdown-divider"></li>
+            <li><a href="#">Separated link</a></li>
+        </ul>
+    </div>
+</div>
+
+<h2>Custom File</h2>
+
+<div class="input-group">
+  <div class="input-group-addon">
+    <span class="input-group-text">Upload</span>
+  </div>
+  <label class="custom-file">
+    <input type="file" id="custom-file-1" class="custom-file-input">
+    <span class="custom-file-control"></span>
+  </label>
+</div>
+
+<div class="input-group">
+  <label class="custom-file">
+    <input type="file" id="custom-file-2" class="custom-file-input">
+    <span class="custom-file-control"></span>
+  </label>
+  <div class="input-group-addon">
+    <span class="input-group-text" id="">Upload</span>
+  </div>
+</div>
+
+<div class="input-group">
+  <div class="input-group-btn">
+    <button class="btn btn-outline-secondary" type="button">Button</button>
+  </div>
+  <label class="custom-file">
+    <input type="file" id="custom-file-3" class="custom-file-input">
+    <span class="custom-file-control"></span>
+  </label>
+</div>
+
+<div class="input-group">
+  <label class="custom-file">
+    <input type="file" id="custom-file-4" class="custom-file-input">
+    <span class="custom-file-control"></span>
+  </label>
+  <div class="input-group-btn">
+    <button class="btn btn-outline-secondary" type="button">Button</button>
+  </div>
+</div>
 
 </div></div></div>
 
