--- a/test/visual/list.html
+++ b/test/visual/list.html
@@ -498,7 +498,7 @@
     <a href="#" class="list-item list-item-action list-item-info">Info list item</a>
     <a href="#" class="list-item list-item-action list-item-warning">Warning list item</a>
     <a href="#" class="list-item list-item-action list-item-danger">Danger list item</a>
-    <a href="#" class="list-item list-item-action list-item-list">Light list item</a>
+    <a href="#" class="list-item list-item-action list-item-light">Light list item</a>
     <a href="#" class="list-item list-item-action list-item-dark">Dark list item</a>
 </div>
 
@@ -509,7 +509,7 @@
     <a href="#" class="list-item list-item-action list-item-info">Info list item</a>
     <a href="#" class="list-item list-item-action list-item-warning">Warning list item</a>
     <a href="#" class="list-item list-item-action list-item-danger">Danger list item</a>
-    <a href="#" class="list-item list-item-action list-item-list">Light list item</a>
+    <a href="#" class="list-item list-item-action list-item-light">Light list item</a>
     <a href="#" class="list-item list-item-action list-item-dark">Dark list item</a>
 </div>
 
